--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -23,6 +23,12 @@
         body.rs-frontend {
             overflow: visible!important;
         }
+        #rs-site-content {
+            color: black!important;
+        }
+        #rs-site-content a {
+            color: blue!important;
+        }
     </style>
 </noscript>
 
