--- a/project/static/css/backend.css
+++ b/project/static/css/backend.css
@@ -12,6 +12,7 @@ body.rs-backend .rs-mitmachen {
     font-family: 'Sen', sans-serif;
     font-weight: 400;
     color: rgb(24, 38, 50);
+    margin-top: 120px;
 }
 
 .rs-mitmachen h1,
@@ -63,7 +64,7 @@ body.rs-backend .rs-mitmachen {
 
 #rs-backend-logo img {
     height: 50px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 #rs-backend-logo {
@@ -71,6 +72,7 @@ body.rs-backend .rs-mitmachen {
     align-items: center;
     font-family: 'Passion One', cursive;
     font-size: 3.5rem;
+    margin-bottom: 15px;
 }
 
 #rs-backend-lang a{
@@ -90,3 +92,11 @@ a.rs-form-popover {
     cursor: pointer;
 }
 
+
+#coords-modal-label {
+    line-height: 1!important;
+}
+
+a {
+    color: rgb(180, 30, 30);
+}
