--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -30,7 +30,7 @@
         <path class="rs-nav-dot" d="M451.78,759a9.4,9.4,0,1,0,10.06,8.69A9.4,9.4,0,0,0,451.78,759Z"/>
     </svg>
     <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
-    <div>
+    <div class="rs-nav-wrapper">
         <span class="rs-title">{{_('Reisesteine')}}</span>
 
         <div class="rs-nav-indexpages">
