--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{url_for('static', filename='js/node_modules/glightbox/dist/css/glightbox.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='js/node_modules/glightbox/dist/css/glightbox.min.css')}}">
     </head>
 
     <body class="rs-frontend"> 
